--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <Footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    <Footer>
 </body>
 
 </html>
